syntax = "proto3";

package protofiles;
option go_package = "protofiles/greetpb";


// request
message GreetRequest {
    string countryCode = 1;
    string userName = 2;
}

// response
message GreetResponse {
    string result = 1;
}

service GreetService {
    //unary
    rpc Greet(GreetRequest) returns (GreetResponse) {}
}